increase line-height to prevent text clipping

--- a/frontend/public/components/graphs/graphs.scss
+++ b/frontend/public/components/graphs/graphs.scss
@@ -12,5 +12,5 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  line-height: 1.2; // so descenders don't clip
+  line-height: 1.4; // so descenders don't clip
 }
